test/type/wrong/hr3.kk.out
test/type/wrong/hr3.kk(5,11): error: unannotated parameters cannot be polymorphic
 context : fun wrong(x) {
 poly(x)
 }
 term : x
 inferred type: list<forall<a> (a) -> a>
 hint : annotate the parameter with a polymorphic type