test/type/wrong/hr3.kk
fun poly(xs : list<forall<a> a -> a>)  {
  1
}

fun wrong(x) {
  poly(x)
}